@@ -63,6 +63,7 @@ public class PaymentsReportingIngestionFlowFileActivityImpl implements PaymentsR
 
 	@Override
 	public PaymentsReportingIngestionFlowFileActivityResult processFile(Long ingestionFlowFileId) {
+		log.info("Processing paymentsReporting IngestionFlowFile {}", ingestionFlowFileId);
 		File retrievedFile = null;
 		try {
 			IngestionFlowFileDTO ingestionFlowFileDTO = findIngestionFlowFileRecord(ingestionFlowFileId);
@@ -111,7 +112,7 @@ public class PaymentsReportingIngestionFlowFileActivityImpl implements PaymentsR
 	private File retrieveFile(IngestionFlowFileDTO ingestionFlowFileDTO) throws IOException {
 		List<Path> paths = ingestionFlowFileRetrieverService
 			.retrieveAndUnzipFile(Path.of(ingestionFlowFileDTO.getFilePath()), ingestionFlowFileDTO.getFileName());
-		return paths.get(0).toFile();
+		return paths.getFirst().toFile();
 	}
 
 	/**
@@ -150,7 +151,6 @@ public class PaymentsReportingIngestionFlowFileActivityImpl implements PaymentsR
 	 * Delete the specified file if not null.
 	 *
 	 * @param file2Delete the file to delete.
-	 * @throws IOException if an error occurs during deletion.
 	 */
 	private void deletion(File file2Delete) {
 		if(file2Delete != null) {
